Bug 275434 - Version check broken?
Summary: Version check broken?
Status: RESOLVED FIXED
Alias: None
Product: solid
Classification: Unmaintained
Component: networkmanagement (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Will Stephenson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-06-11 23:08 UTC by Kai Uwe Broulik
Modified: 2011-06-12 13:43 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kai Uwe Broulik 2011-06-11 23:08:33 UTC
Version:           unspecified (using Devel) 
OS:                Linux

In Lamarque’s blog post there is “Fix NM version number check.” and now the plasmoid has a label saying “We need NetworkManager version between 0.8.1 and 0.8.10 to work, found 0.8.1“

Reproducible: Always
Comment 1 Lamarque V. Souza 2011-06-12 02:17:55 UTC
Git commit e1abda3b9a3109531330a1c663a397e98133af1c by Lamarque V. Souza.
Committed on 12/06/2011 at 02:17.
Pushed by lvsouza into branch 'master'.

Really fix NM version check.

BUG: 275434

M  +1    -1    applet/nmpopup.cpp     

http://commits.kde.org/networkmanagement/e1abda3b9a3109531330a1c663a397e98133af1c
Comment 2 Lamarque V. Souza 2011-06-12 04:11:05 UTC
Git commit bd2b796bd8a6e8232bc2c4a597acf38b95a561c1 by Lamarque V. Souza.
Committed on 12/06/2011 at 04:09.
Pushed by lvsouza into branch 'master'.

Ok, this one fix it for sure.

CCBUG: 275434

M  +24   -9    applet/nmpopup.cpp     

http://commits.kde.org/networkmanagement/bd2b796bd8a6e8232bc2c4a597acf38b95a561c1
Comment 3 Lamarque V. Souza 2011-06-12 04:14:54 UTC
Git commit 48d88b23542117c7a0d745e8b4fd1793fc21a81c by Lamarque V. Souza.
Committed on 12/06/2011 at 04:10.
Pushed by lvsouza into branch 'nm09'.

Ok, this one fix it for sure.

CCBUG: 275434

M  +26   -10   applet/nmpopup.cpp     

http://commits.kde.org/networkmanagement/48d88b23542117c7a0d745e8b4fd1793fc21a81c
Comment 4 Kai Uwe Broulik 2011-06-12 13:43:57 UTC
That fixed it on my machine :)
(But that simple label looks a bit weird and out of place and foreign)