Really fix NM version check.

BUG: 275434